force-app/main/default/objects/Geocoding_Configuration__mdt/Geocoding_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Geocoding Configuration</label>
    <pluralLabel>Geocoding Configurations</pluralLabel>
</CustomObject>