force-app/main/default/objects/Geocoding_Configuration__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The Google Maps Geocoding API key used to resolve school addresses.</description>
    <label>API Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>