force-app/main/default/objects/Geocoding_Configuration__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The Google Maps Geocoding API endpoint.</description>
    <label>Endpoint</label>
    <type>Text</type>
    <length>255</length>
</CustomField>