force-app/main/default/objects/Geocoding_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this geocoding configuration is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>