force-app/main/default/objects/Geocoding_Configuration__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>The geocoding provider (e.g. Google Maps).</description>
    <label>Provider</label>
    <type>Text</type>
    <length>64</length>
</CustomField>